Fix site navigation issues: article modals, all articles functionality, and search integration
- Replace placeholder alerts with functional article modals displaying full content
- Add proper 'All Articles' functionality to footer navigation
- Enhance article modals with structured content display and CTAs
- Add consultation modal with contact options
- Improve search result display and segment filtering
- Add comprehensive CSS styling for new modal components
- Ensure mobile responsiveness for modal interfaces

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="footer-section">
                     <h4>Resources</h4>
                     <ul>
-                        <li><a href="#articles">All Articles</a></li>
+                        <li><a href="javascript:void(0)" onclick="if(window.searchManager) { searchManager.showAllArticles(); } else { alert('Search system loading...'); }">All Articles</a></li>
                         <li><a href="#consultation">Consultation</a></li>
                         <li><a href="#trade-program">Trade Program</a></li>
                     </ul>
